c4prj2_input/grade.txt
Grading at Sat Jul 20 17:47:04 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:18:27: error: ‘decks’ undeclared (first use in this function)
       fc->decks = realloc(decks, (fc->n_decks+1)*sizeof(*fc->decks));
                           ^
future.c:18:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation of future.c failed

Overall Grade: F
